--- a/notebooks/ReadIn.ipynb
+++ b/notebooks/ReadIn.ipynb
@@ -471,6 +471,25 @@
     "ax[1].set_title('Streets of Abila')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align=\"right\">\n",
+    "    <a href=\"./EDA.ipynb\">Exploratory Data Analysis >></a>\n",
+    "</div>\n",
+    "<div>\n",
+    "    <center>\n",
+    "        <span style=\"width:250px;display:inline-block\">\n",
+    "            <a href=\"../Master.ipynb\">Master Notebook</a>\n",
+    "        </span>\n",
+    "        <span style=\"width:250px;display:inline-block\">\n",
+    "            <a href=\"../README.md\">Table of Contents</a>\n",
+    "        </span>\n",
+    "    <center>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
