Added Rest of Notebooks

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -337,6 +337,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gps.head()\n",
+    "gps[['lat', 'long', 'Timestamp']].resample(rule='15Min', on='Timestamp')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
