--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -506,22 +506,22 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "    <span  style=width:700px;display:inline-block;align:left\">\n",
-    "        <a href=\"./ReadIn.ipynb\"><< Reading the Data</a>\n",
+    "    <span  style=\"width:600px;display:inline-block;text-align:left\">\n",
+    "        <a href=\"./ReadIn.ipynb\">&#60;&#60;Reading the Data</a>\n",
     "    </span>\n",
-    "    <span style=\"width:700px;display:inline-block;\" align=\"right\">\n",
-    "        <a href=\"./FurtherEDA.ipynb\">Further Exploratory Data Analysis>></a>\n",
+    "    <span style=\"width:600px;display:inline-block;text-align:right\">\n",
+    "        <a href=\"./FurtherEDA.ipynb\">Further Exploratory Data Analysis&#62;&#62;</a>\n",
     "    </span>\n",
     "</div>\n",
     "<div>\n",
     "    <center>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
-    "            <a href=\"../Master.ipynb\">Master Notebook</a>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"./Master.ipynb\">Master Notebook</a>\n",
     "        </span>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
     "            <a href=\"../README.md\">Table of Contents</a>\n",
     "        </span>\n",
-    "    <center>\n",
+    "    </center>\n",
     "</div>"
    ]
   }
@@ -531,7 +531,7 @@
    "hash": "1ef96b760e1a48c5c4fda914d5f95fa3b86b312c8ce241282acda50a269567b2"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -546,9 +546,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
