--- a/notebooks/Modeling.ipynb
+++ b/notebooks/Modeling.ipynb
@@ -9,152 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>id</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>long</th>\n",
-       "      <th>LastName</th>\n",
-       "      <th>FirstName</th>\n",
-       "      <th>CurrentEmploymentType</th>\n",
-       "      <th>CurrentEmploymentTitle</th>\n",
-       "      <th>day</th>\n",
-       "      <th>hour</th>\n",
-       "      <th>minute</th>\n",
-       "      <th>second</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2014-01-06 06:28:01</td>\n",
-       "      <td>35</td>\n",
-       "      <td>36.076223</td>\n",
-       "      <td>24.874643</td>\n",
-       "      <td>Vasco-Pais</td>\n",
-       "      <td>Willem</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>Environmental Safety Advisor</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2014-01-06 06:28:01</td>\n",
-       "      <td>35</td>\n",
-       "      <td>36.076223</td>\n",
-       "      <td>24.874643</td>\n",
-       "      <td>Vasco-Pais</td>\n",
-       "      <td>Willem</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>Environmental Safety Advisor</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2014-01-06 06:28:03</td>\n",
-       "      <td>35</td>\n",
-       "      <td>36.076211</td>\n",
-       "      <td>24.874443</td>\n",
-       "      <td>Vasco-Pais</td>\n",
-       "      <td>Willem</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>Environmental Safety Advisor</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2014-01-06 06:28:05</td>\n",
-       "      <td>35</td>\n",
-       "      <td>36.076217</td>\n",
-       "      <td>24.874253</td>\n",
-       "      <td>Vasco-Pais</td>\n",
-       "      <td>Willem</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>Environmental Safety Advisor</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014-01-06 06:28:06</td>\n",
-       "      <td>35</td>\n",
-       "      <td>36.076214</td>\n",
-       "      <td>24.874167</td>\n",
-       "      <td>Vasco-Pais</td>\n",
-       "      <td>Willem</td>\n",
-       "      <td>Executive</td>\n",
-       "      <td>Environmental Safety Advisor</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>28</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Timestamp  id        lat       long    LastName FirstName  \\\n",
-       "0 2014-01-06 06:28:01  35  36.076223  24.874643  Vasco-Pais    Willem   \n",
-       "1 2014-01-06 06:28:01  35  36.076223  24.874643  Vasco-Pais    Willem   \n",
-       "2 2014-01-06 06:28:03  35  36.076211  24.874443  Vasco-Pais    Willem   \n",
-       "3 2014-01-06 06:28:05  35  36.076217  24.874253  Vasco-Pais    Willem   \n",
-       "4 2014-01-06 06:28:06  35  36.076214  24.874167  Vasco-Pais    Willem   \n",
-       "\n",
-       "  CurrentEmploymentType        CurrentEmploymentTitle  day  hour  minute  \\\n",
-       "0             Executive  Environmental Safety Advisor    6     6      28   \n",
-       "1             Executive  Environmental Safety Advisor    6     6      28   \n",
-       "2             Executive  Environmental Safety Advisor    6     6      28   \n",
-       "3             Executive  Environmental Safety Advisor    6     6      28   \n",
-       "4             Executive  Environmental Safety Advisor    6     6      28   \n",
-       "\n",
-       "   second  \n",
-       "0       1  \n",
-       "1       1  \n",
-       "2       3  \n",
-       "3       5  \n",
-       "4       6  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
@@ -416,6 +273,30 @@
     "\n",
     "preds = pipe.fit_predict(buys)\n",
     "pd.DataFrame(preds)[0].unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "    <span  style=\"width:600px;display:inline-block;text-align:left\">\n",
+    "        <a href=\"./CleanUp.ipynb\">&#60;&#60;Data Cleanup</a>\n",
+    "    </span>\n",
+    "    <span style=\"width:600px;display:inline-block;text-align:right\">\n",
+    "        <a href=\"./ObservationsQ1.ipynb\">Observations Question 1&#62;&#62;</a>\n",
+    "    </span>\n",
+    "</div>\n",
+    "<div>\n",
+    "    <center>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"./Master.ipynb\">Master Notebook</a>\n",
+    "        </span>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"../README.md\">Table of Contents</a>\n",
+    "        </span>\n",
+    "    </center>\n",
+    "</div>"
    ]
   }
  ],
