--- a/notebooks/ReadIn.ipynb
+++ b/notebooks/ReadIn.ipynb
@@ -476,20 +476,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">\n",
-    "    <a href=\"./EDA.ipynb\">Exploratory Data Analysis >></a>\n",
+    "<div>\n",
+    "    <span style=\"width:1200px;display:inline-block;text-align:right\">\n",
+    "        <a href=\"./EDA.ipynb\">Exploratory Data Analysis&#62;&#62;</a>\n",
+    "    </span>\n",
     "</div>\n",
     "<div>\n",
     "    <center>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
-    "            <a href=\"../Master.ipynb\">Master Notebook</a>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"./Master.ipynb\">Master Notebook</a>\n",
     "        </span>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
     "            <a href=\"../README.md\">Table of Contents</a>\n",
     "        </span>\n",
-    "    <center>\n",
+    "    </center>\n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
