--- a/notebooks/ObservationsQ1.ipynb
+++ b/notebooks/ObservationsQ1.ipynb
@@ -8,6 +8,30 @@
    "source": [
     "import pandas"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "    <span  style=\"width:600px;display:inline-block;text-align:left\">\n",
+    "        <a href=\"./Modeling.ipynb\">&#60;&#60;Modeling</a>\n",
+    "    </span>\n",
+    "    <span style=\"width:600px;display:inline-block;text-align:right\">\n",
+    "        <a href=\"./ObservationsQ2.ipynb\">Observations Question 2&#62;&#62;</a>\n",
+    "    </span>\n",
+    "</div>\n",
+    "<div>\n",
+    "    <center>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"./Master.ipynb\">Master Notebook</a>\n",
+    "        </span>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"../README.md\">Table of Contents</a>\n",
+    "        </span>\n",
+    "    </center>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
