--- a/notebooks/ObservationsQ3.ipynb
+++ b/notebooks/ObservationsQ3.ipynb
@@ -8,14 +8,48 @@
    "source": [
     "import pandas"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div>\n",
+    "    <span style=\"width:600px;display:inline-block;text-align:left\">\n",
+    "        <a href=\"./ObservationsQ2.ipynb\">&#60;&#60;Observations Question 2</a>\n",
+    "    </span>\n",
+    "</div>\n",
+    "<div>\n",
+    "    <center>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"./Master.ipynb\">Master Notebook</a>\n",
+    "        </span>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"../README.md\">Table of Contents</a>\n",
+    "        </span>\n",
+    "    </center>\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
