Reading Data notebook clean

--- a/notebooks/Master.ipynb
+++ b/notebooks/Master.ipynb
@@ -1,19 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd"
+    "<center style=\"font-size:48px;\">Master Notebook</center>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reading in the Data"
+    "# Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Science\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Plotting\n",
+    "import matplotlib.pyplot as plt\n",
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing the Data"
    ]
   },
   {
@@ -23,9 +42,9 @@
    "outputs": [],
    "source": [
     "cars = pd.read_csv('../Data/car-assignments.csv')\n",
-    "cc = pd.read_csv('../Data/cc_data.csv', encoding='cp1252')\n",
+    "cc = pd.read_csv('../Data/cc_data.csv', encoding='cp1252', parse_dates=['timestamp'])\n",
     "gps = pd.read_csv('../Data/gps.csv', parse_dates=['Timestamp'])\n",
-    "loyalty = pd.read_csv('../Data/loyalty_data.csv', encoding='cp1252')"
+    "loyalty = pd.read_csv('../Data/loyalty_data.csv', encoding='cp1252', parse_dates=['timestamp'])"
    ]
   }
  ],
