Add geopandas to environment

--- a/notebooks/Master.ipynb
+++ b/notebooks/Master.ipynb
@@ -21,11 +21,18 @@
    "outputs": [],
    "source": [
     "# Data Science\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "# GeoSpatial \n",
+    "import geopandas as gpd\n",
     "\n",
     "# Plotting\n",
     "import matplotlib.pyplot as plt\n",
-    "import geopandas as gpd"
+    "import seaborn as sns\n",
+    "import plotly.express as pex\n",
+    "import folium\n",
+    "from folium.plugins import HeatMap, HeatMapWithTime, MousePosition"
    ]
   },
   {
