--- a/notebooks/ReadIn.ipynb
+++ b/notebooks/ReadIn.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center style=\"font-size:48px;\">Reading In the data</center>"
+    "<center style=\"font-size:48px;\">Reading In the data</center>\n",
+    "<br>\n",
+    "<center>How to read in the various csvs</center>"
    ]
   },
   {
@@ -20,8 +22,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data Science\n",
     "import pandas as pd\n",
+    "\n",
+    "# GeoSpatial \n",
     "import geopandas as gpd\n",
+    "\n",
+    "# Plotting\n",
     "import matplotlib.pyplot as plt"
    ]
   },
