EDA notebook cleanup

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -4,7 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center style=\"font-size:48px;\">Exploratory Data Analysis</center>"
+    "<center style=\"font-size:48px;\">Exploratory Data Analysis</center>\n",
+    "<br>\n",
+    "<center>EDA on the data in each csv indiviually</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Libraries and Data Import"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Libraries"
    ]
   },
   {
@@ -13,20 +29,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Data Science\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "#GeoSpatial\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "# Plotting\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import geopandas as gpd\n",
+    "import plotly.express as pex\n",
     "import folium\n",
     "from folium.plugins import HeatMap, HeatMapWithTime, MousePosition\n",
-    "import plotly.express as pex\n",
-    "\n",
-    "cars = pd.read_csv('../Data/car-assignments.csv')\n",
-    "cc = pd.read_csv('../Data/cc_data.csv', encoding='cp1252')\n",
-    "gps = pd.read_csv('../Data/gps.csv', parse_dates=['Timestamp'])\n",
-    "loyalty = pd.read_csv('../Data/loyalty_data.csv', encoding='cp1252')\n",
-    "\n",
     "plt.style.use('fivethirtyeight')"
    ]
   },
@@ -34,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cars"
+    "## Data Imports"
    ]
   },
   {
@@ -43,7 +58,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cars.head()"
+    "cars = pd.read_csv('../Data/car-assignments.csv')\n",
+    "cc = pd.read_csv('../Data/cc_data.csv', encoding='cp1252')\n",
+    "gps = pd.read_csv('../Data/gps.csv', parse_dates=['Timestamp'])\n",
+    "loyalty = pd.read_csv('../Data/loyalty_data.csv', encoding='cp1252')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cars Dataset"
    ]
   },
   {
@@ -53,6 +85,13 @@
    "outputs": [],
    "source": [
     "cars.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most variables are strings. CarID has some 9 null values."
    ]
   },
   {
@@ -120,7 +159,7 @@
     "sns.countplot(x= 'CurrentEmploymentType', data = grouped)\n",
     "plt.title('Number of Jobs per Type')\n",
     "plt.show()\n",
-    "cars[['CurrentEmploymentTitle', 'CurrentEmploymentType']].groupby('CurrentEmploymentType').agg(['count'])"
+    "cars[['CurrentEmploymentTitle', 'CurrentEmploymentType']].drop_duplicates().groupby('CurrentEmploymentType').agg(['count'])"
    ]
   },
   {
@@ -172,16 +211,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gps.head()"
+    "gps.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "gps.info()"
+    "Except for Timestamp the varables are numeric. There are no null values."
    ]
   },
   {
@@ -221,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The year and month are contstants! They only contain the values 2014 and 1 respectively. "
+    "The year and month are constants! They only contain the values 2014 and 1 respectively. The daywas from the 6th to 19th of January 2014."
    ]
   },
   {
@@ -263,7 +300,8 @@
    "source": [
     "# Correlations\n",
     "fig, ax = plt.subplots(1, figsize=(15,10))\n",
-    "sns.heatmap(gps.corr(), vmin=-1, vmax= 1, annot=True, mask = np.triu(np.ones_like(gps.corr())))\n"
+    "sns.heatmap(gps.corr(), vmin=-1, vmax= 1, annot=True, mask = np.triu(np.ones_like(gps.corr())))\n",
+    "plt.savefig('../images/GPSCorrelations.jpg')"
    ]
   },
   {
@@ -280,6 +318,7 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(gps, x= 'long', box= True, title='Longitude Distribution')\n",
+    "fig.write_image('../images/LongDistribution.jpg')\n",
     "fig.show()"
    ]
   },
@@ -290,7 +329,15 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(gps, x= 'lat', box= True, title='Latitude Distribution')\n",
+    "fig.write_image('../images/LatDistribution.jpg')\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Neither Latitude and Longitude are Normally ditibuted. Both are shofted and are bimodal"
    ]
   },
   {
@@ -309,6 +356,7 @@
     "fmtr = \"function(num) {return L.Util.formatNum(num, 3) + ' º ';};\"\n",
     "MousePosition(position='topleft', separator=' | ', prefix=\"Mouse:\",\n",
     "              lat_formatter=fmtr, lng_formatter=fmtr).add_to(m)\n",
+    "m.save('../images/BigHeatMap.html')\n",
     "m"
    ]
   },
@@ -333,17 +381,8 @@
     "HeatMapWithTime(weights, index = index).add_to(m)\n",
     "MousePosition(position='topleft', separator=' | ', prefix=\"Mouse:\",\n",
     "              lat_formatter=fmtr, lng_formatter=fmtr).add_to(m)\n",
+    "m.save('../images/BigTimeHeatMap.html')\n",
     "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gps.head()\n",
-    "gps[['lat', 'long', 'Timestamp']].resample(rule='15Min', on='Timestamp')"
    ]
   },
   {
@@ -359,16 +398,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cc.head()"
+    "cc.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "cc.info()"
+    "Most  variables are strings; except for price. There are no null values."
    ]
   },
   {
@@ -378,6 +415,13 @@
    "outputs": [],
    "source": [
     "cc.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Price does fluctuate quite a bit. The quantiles and standard deviation tell me there is a big spread and most likely some outliers."
    ]
   },
   {
@@ -406,6 +450,7 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(cc, x='price', box=True, points='all', hover_data=cc.columns, title='Credit Card Spending Distribution')\n",
+    "fig.write_image('../images/Credit_Card.jpg')\n",
     "fig.show()\n",
     "cc.groupby('location')['price'].agg(['mean', 'median']).sort_values('mean', ascending=False)"
    ]
@@ -430,16 +475,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loyalty.head()"
+    "loyalty.info()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "loyalty.info()"
+    "Most  variables are strings; except for price. There are no null values."
    ]
   },
   {
@@ -449,6 +492,13 @@
    "outputs": [],
    "source": [
     "loyalty.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Price does fluctuate quite a bit. The quantiles and standard deviation tell me there is a big spread and most likely some outliers."
    ]
   },
   {
@@ -477,6 +527,7 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(loyalty, x='price', box=True, points='all', hover_data=cc.columns, title='Loyalty Card Spending Distribution')\n",
+    "fig.write_image('../images/Loyalty.jpg')\n",
     "fig.show()\n",
     "loyalty.groupby('location')['price'].agg(['mean', 'median']).sort_values('mean', ascending=False)"
    ]
@@ -486,19 +537,6 @@
    "metadata": {},
    "source": [
     "Same story as the credit cards prices. Prices do seem much lower with loyalty cards though"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lets see if there are any locations that are only in one dataframe\n",
-    "uniqueCC = set(cc['location']).difference(set(loyalty['location']))\n",
-    "print('Unique locations in the credit card dataframe : {}'.format(uniqueCC))\n",
-    "uniqueLoyalty = set(loyalty['location']).difference(set(cc['location']))\n",
-    "print('Unique locations in the loyalty dataframe : {}'.format(uniqueLoyalty))"
    ]
   },
   {
@@ -528,10 +566,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "1ef96b760e1a48c5c4fda914d5f95fa3b86b312c8ce241282acda50a269567b2"
+   "hash": "fbc5d808ed13306b281beb3b148e89003940376baf375861433a5e62b978e9c3"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('COMP4449')",
    "language": "python",
    "name": "python3"
   },
@@ -545,7 +583,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
