Data Cleaning notebook cleaning

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -251,6 +251,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def isWeekend(x):\n",
+    "    if x.weekday() >= 5:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "gps['Weekend'] = gps.apply(lambda x: isWeekend(x['Timestamp']), axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gps.describe()"
    ]
   },
@@ -383,6 +398,45 @@
     "              lat_formatter=fmtr, lng_formatter=fmtr).add_to(m)\n",
     "m.save('../images/BigTimeHeatMap.html')\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Heatmap that is segmented by employment type\n",
+    "m = folium.Map(location=[medianLat+.01, medianLong], zoom_start=14)\n",
+    "kronos = gpd.read_file('../Geospatial/Kronos_Island.shp')\n",
+    "folium.features.GeoJson(kronos,  style_function= lambda feature: {'fillColor' : 'black'}, control=False).add_to(m)\n",
+    "abila = gpd.read_file('../Geospatial/Abila.shp')\n",
+    "folium.features.GeoJson(abila, style_function= lambda feature: {'color' : 'white'}, control=False).add_to(m)\n",
+    "\n",
+    "week = gps[~gps.Weekend]\n",
+    "weekend = gps[gps.Weekend]\n",
+    "\n",
+    "g= folium.FeatureGroup(name = 'WeekDay')\n",
+    "m.add_child(g)\n",
+    "HeatMap(week[['lat', 'long']], radius =20).add_to(g)\n",
+    "\n",
+    "g= folium.FeatureGroup(name = 'WeekEnd', show = False)\n",
+    "m.add_child(g)\n",
+    "HeatMap(weekend[['lat', 'long']], radius =20).add_to(g)\n",
+    "\n",
+    "fmtr = \"function(num) {return L.Util.formatNum(num, 3) + ' º ';};\"\n",
+    "MousePosition(position='topleft', separator=' | ', prefix=\"Mouse:\",\n",
+    "              lat_formatter=fmtr, lng_formatter=fmtr).add_to(m)\n",
+    "folium.LayerControl(collapsed=False).add_to(m)\n",
+    "m.save('../images/WeekDaysHeatmap.html')\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On the weekends people usually dont go to the office and tend to go to more fun places; such as the coast line."
    ]
   },
   {
