ML notebook cleaning

--- a/notebooks/CleanUp.ipynb
+++ b/notebooks/CleanUp.ipynb
@@ -1201,11 +1201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "locations.to_csv('../CheckPoints/Locations_Clean.csv')\n",
+    "n = len(locations)\n",
+    "locations1 = locations[:round(n/2)]\n",
+    "locations2 = locations[round(n/2):]\n",
+    "locations1.to_csv('../CheckPoints/Locations1_Clean.csv')\n",
+    "locations2.to_csv('../CheckPoints/Locations2_Clean.csv')\n",
     "buys.to_csv('../CheckPoints/Buys_Clean.csv')"
    ]
   },
@@ -1214,22 +1218,22 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "    <span  style=width:700px;display:inline-block;align:left\">\n",
-    "        <a href=\"./FurtherEDA.ipynb\"><< Further Exploratory Data Analysis</a>\n",
+    "    <span  style=\"width:600px;display:inline-block;text-align:left\">\n",
+    "        <a href=\"./FurtherEDA.ipynb\">&#60;&#60;Further Exploratoy Data Analysis</a>\n",
     "    </span>\n",
-    "    <span style=\"width:700px;display:inline-block;\" align=\"right\">\n",
-    "        <a href=\"./Modeling.ipynb\">Modeling >></a>\n",
+    "    <span style=\"width:600px;display:inline-block;text-align:right\">\n",
+    "        <a href=\"./Modeling.ipynb\">Modeling&#62;&#62;</a>\n",
     "    </span>\n",
     "</div>\n",
     "<div>\n",
     "    <center>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
-    "            <a href=\"../Master.ipynb\">Master Notebook</a>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"./Master.ipynb\">Master Notebook</a>\n",
     "        </span>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
     "            <a href=\"../README.md\">Table of Contents</a>\n",
     "        </span>\n",
-    "    <center>\n",
+    "    </center>\n",
     "</div>"
    ]
   }
