--- a/notebooks/FurtherEDA.ipynb
+++ b/notebooks/FurtherEDA.ipynb
@@ -315,22 +315,22 @@
    "metadata": {},
    "source": [
     "<div>\n",
-    "    <span  style=width:700px;display:inline-block;align:left\">\n",
-    "        <a href=\"./EDA.ipynb\"><< Explortory Data Analysis</a>\n",
+    "    <span  style=\"width:600px;display:inline-block;text-align:left\">\n",
+    "        <a href=\"./EDA.ipynb\">&#60;&#60;Exploratoy Data Analysis</a>\n",
     "    </span>\n",
-    "    <span style=\"width:700px;display:inline-block;\" align=\"right\">\n",
-    "        <a href=\"./CleanUp.ipynb\">Data Clean Up>></a>\n",
+    "    <span style=\"width:600px;display:inline-block;text-align:right\">\n",
+    "        <a href=\"./CleanUp.ipynb\">Data Clean Up&#62;&#62;</a>\n",
     "    </span>\n",
     "</div>\n",
     "<div>\n",
     "    <center>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
-    "            <a href=\"../Master.ipynb\">Master Notebook</a>\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
+    "            <a href=\"./Master.ipynb\">Master Notebook</a>\n",
     "        </span>\n",
-    "        <span style=\"width:250px;display:inline-block\">\n",
+    "        <span style=\"width:200px;display:inline-block;text-align:center\">\n",
     "            <a href=\"../README.md\">Table of Contents</a>\n",
     "        </span>\n",
-    "    <center>\n",
+    "    </center>\n",
     "</div>"
    ]
   }
