--- a/notebooks/ObservationsQ1.ipynb
+++ b/notebooks/ObservationsQ1.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center style=\"font-size:48px;\">Question 1 Observations</center>\n",
+    "<br>\n",
+    "Question 1) Describe common daily routines for GAStech employees. What does a day in the life of a typical GAStech employee look like?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
