--- a/notebooks/Master.ipynb
+++ b/notebooks/Master.ipynb
@@ -28,11 +28,17 @@
     "import geopandas as gpd\n",
     "\n",
     "# Plotting\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import plotly.express as pex\n",
     "import folium\n",
-    "from folium.plugins import HeatMap, HeatMapWithTime, MousePosition"
+    "from folium.plugins import HeatMap, HeatMapWithTime, MousePosition\n",
+    "import matplotlib.pyplot as plt\n",
+    "import plotly.express as pex\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Machine Learning\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import OneHotEncoder"
    ]
   },
   {
