Image Repo clean and Q1

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -114,6 +114,7 @@
     "plt.subplots(figsize = (15,10))\n",
     "sns.countplot(x= 'CurrentEmploymentType', data = cars)\n",
     "plt.title('Number of Employees with Job Types')\n",
+    "plt.savefig('../images/EDA/EmploymentTypeCount.jpg')\n",
     "plt.show()\n",
     "cars.groupby('CurrentEmploymentType')['LastName'].agg(['count']).sort_values('count', ascending=False)"
    ]
@@ -136,6 +137,7 @@
     "sns.countplot(x= 'CurrentEmploymentTitle', data = cars)\n",
     "plt.title('Number of Employees per Job')\n",
     "plt.xticks(rotation =90)\n",
+    "plt.savefig('../images/EDA/EmploymentTitleCount.jpg')\n",
     "plt.show()\n",
     "cars.groupby('CurrentEmploymentTitle')['LastName'].agg(['count']).sort_values('count', ascending=False)"
    ]
@@ -158,6 +160,7 @@
     "plt.subplots(figsize = (15,10))\n",
     "sns.countplot(x= 'CurrentEmploymentType', data = grouped)\n",
     "plt.title('Number of Jobs per Type')\n",
+    "plt.savefig('../images/EDA/EmploymentTitlesperType.jpg')\n",
     "plt.show()\n",
     "cars[['CurrentEmploymentTitle', 'CurrentEmploymentType']].drop_duplicates().groupby('CurrentEmploymentType').agg(['count'])"
    ]
@@ -316,7 +319,8 @@
     "# Correlations\n",
     "fig, ax = plt.subplots(1, figsize=(15,10))\n",
     "sns.heatmap(gps.corr(), vmin=-1, vmax= 1, annot=True, mask = np.triu(np.ones_like(gps.corr())))\n",
-    "plt.savefig('../images/GPSCorrelations.jpg')"
+    "plt.savefig('../images/EDA/GPSCorrelations.jpg')\n",
+    "plt.show()"
    ]
   },
   {
@@ -333,7 +337,7 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(gps, x= 'long', box= True, title='Longitude Distribution')\n",
-    "fig.write_image('../images/LongDistribution.jpg')\n",
+    "fig.write_image('../images/EDA/LongDistribution.jpg')\n",
     "fig.show()"
    ]
   },
@@ -344,7 +348,7 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(gps, x= 'lat', box= True, title='Latitude Distribution')\n",
-    "fig.write_image('../images/LatDistribution.jpg')\n",
+    "fig.write_image('../images/EDA/LatDistribution.jpg')\n",
     "fig.show()"
    ]
   },
@@ -371,7 +375,7 @@
     "fmtr = \"function(num) {return L.Util.formatNum(num, 3) + ' º ';};\"\n",
     "MousePosition(position='topleft', separator=' | ', prefix=\"Mouse:\",\n",
     "              lat_formatter=fmtr, lng_formatter=fmtr).add_to(m)\n",
-    "m.save('../images/BigHeatMap.html')\n",
+    "m.save('../images/EDA/BigHeatMap.html')\n",
     "m"
    ]
   },
@@ -396,7 +400,7 @@
     "HeatMapWithTime(weights, index = index).add_to(m)\n",
     "MousePosition(position='topleft', separator=' | ', prefix=\"Mouse:\",\n",
     "              lat_formatter=fmtr, lng_formatter=fmtr).add_to(m)\n",
-    "m.save('../images/BigTimeHeatMap.html')\n",
+    "m.save('../images/EDA/TimeLapseHeatMap.html')\n",
     "m"
    ]
   },
@@ -406,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Heatmap that is segmented by employment type\n",
+    "# Heatmapfor weekends and weekday\n",
     "m = folium.Map(location=[medianLat+.01, medianLong], zoom_start=14)\n",
     "kronos = gpd.read_file('../Geospatial/Kronos_Island.shp')\n",
     "folium.features.GeoJson(kronos,  style_function= lambda feature: {'fillColor' : 'black'}, control=False).add_to(m)\n",
@@ -428,7 +432,7 @@
     "MousePosition(position='topleft', separator=' | ', prefix=\"Mouse:\",\n",
     "              lat_formatter=fmtr, lng_formatter=fmtr).add_to(m)\n",
     "folium.LayerControl(collapsed=False).add_to(m)\n",
-    "m.save('../images/WeekDaysHeatmap.html')\n",
+    "m.save('../images/EDA/WeekDaysHeatmap.html')\n",
     "m"
    ]
   },
@@ -504,7 +508,7 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(cc, x='price', box=True, points='all', hover_data=cc.columns, title='Credit Card Spending Distribution')\n",
-    "fig.write_image('../images/Credit_Card.jpg')\n",
+    "fig.write_image('../images/EDA/Credit_Card.jpg')\n",
     "fig.show()\n",
     "cc.groupby('location')['price'].agg(['mean', 'median']).sort_values('mean', ascending=False)"
    ]
@@ -581,7 +585,7 @@
    "outputs": [],
    "source": [
     "fig = pex.violin(loyalty, x='price', box=True, points='all', hover_data=cc.columns, title='Loyalty Card Spending Distribution')\n",
-    "fig.write_image('../images/Loyalty.jpg')\n",
+    "fig.write_image('../images/EDA/Loyalty.jpg')\n",
     "fig.show()\n",
     "loyalty.groupby('location')['price'].agg(['mean', 'median']).sort_values('mean', ascending=False)"
    ]
@@ -623,7 +627,7 @@
    "hash": "fbc5d808ed13306b281beb3b148e89003940376baf375861433a5e62b978e9c3"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('COMP4449')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -637,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
