--- a/notebooks/ReadIn.ipynb
+++ b/notebooks/ReadIn.ipynb
@@ -544,7 +544,7 @@
    "hash": "fbc5d808ed13306b281beb3b148e89003940376baf375861433a5e62b978e9c3"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('COMP4449')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
